# iCalcLines

./: package.json  vite.config.ts
src/: App.vue  main.ts  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: git.rs  main.rs
src/common/: git.ts  logger.ts
src/styles/: font.less  main.less  overwrite.less  reset.less  theme.less  var.less
