[package]
name = "iCalcLines"
version = "0.0.0"
description = "A Tauri App"
authors = ["康兵奎"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all", "devtools"] }
git2 = "0.15.0"
fs-err = "2.9.0"
fix-path-env = { git="https://github.com/tauri-apps/fix-path-env-rs", branch = "dev" }
duct = "0.13.5"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
